Iniciando página Sobre

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucélia Ribeiro - Adestramento e BEA</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1 class="titulo-principal">Lucélia Ribeiro - Adestramento e Bem Estar Animal</h1>
+    </header>
+    <img src="images/Design sem nome.png" alt="">
     
 </body>
 </html>
