Finalização estrutura HTML

--- a/index.html
+++ b/index.html
@@ -8,9 +8,32 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo-principal">Lucélia Ribeiro - Adestramento e Bem Estar Animal</h1>
+        <img src="images/1.png" alt="logo cabeçalho">
+        <nav>
+            <a>Sobre</a>
+            <a>Serviços</a>
+            <a>Contato</a>
+        </nav>
     </header>
-    <img src="images/Design sem nome.png" alt="">
+    
+    <main>
+        <section>
+            <div>
+                <h1>Sejam bem-vindos!!</h1>
+                <h2>Que bom que chegou por aqui, isso quer dizer que está no caminho certo! Juntos iremos construir uma relação saudável e prazerosa com seus cães!</h2>
+            </div>
+            <img src="images/Design sem nome.png" alt="foto conteudo">
+        </section>
+        <section>
+            <h3>Quais são suas prioridades?</h3>
+            <p>Educação para filhotes?</p>
+            <p>Puxar no passeio?</p>
+            <p>Seja qual for sua necessidade, pode contar comigo!</p>
+        </section>
+    </main>
+    <footer>
+        <img src="images/Design sem nome (5).png" alt="">
+    </footer>
     
 </body>
 </html>
