inclusão classes HTML, inicio CSS

--- a/index.html
+++ b/index.html
@@ -7,32 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="images/1.png" alt="logo cabeçalho">
-        <nav>
-            <a>Sobre</a>
-            <a>Serviços</a>
-            <a>Contato</a>
+    <header class="cabecalho">
+        <img class="imagemCabecalho" src="images/1.png" alt="logo cabeçalho">
+        <nav class="menuCabecalho">
+            <a class="itemMenuCabecalho">Sobre</a>
+            <a class="itemMenuCabecalho">Serviços</a>
+            <a class="itemMenuCabecalho">Contato</a>
         </nav>
     </header>
     
-    <main>
-        <section>
-            <div>
-                <h1>Sejam bem-vindos!!</h1>
-                <h2>Que bom que chegou por aqui, isso quer dizer que está no caminho certo! Juntos iremos construir uma relação saudável e prazerosa com seus cães!</h2>
+    <main class="conteudo">
+        <section class="conteudoPrincipal">
+            <div class="conteudoPrincipalEscrito">
+                <h1 class="conteudoPrincipalEscritoTitulo"></h1class>>Sejam bem-vindos!!</h1>
+                <h2 class="conteudoPrincipalEscritoSubtitulo"></h2>>Que bom que chegou por aqui, isso quer dizer que está no caminho certo! Juntos iremos construir uma relação saudável e prazerosa com seus cães!</h2>
+                <button class="conteudoPrincipalEscritoBotao">Confira meu Instagram</button>
             </div>
-            <img src="images/Design sem nome.png" alt="foto conteudo">
+            <img class="conteudoPrincipalEscritoImagem" src="images/Design sem nome.png" alt="foto conteudo">
         </section>
-        <section>
-            <h3>Quais são suas prioridades?</h3>
-            <p>Educação para filhotes?</p>
-            <p>Puxar no passeio?</p>
-            <p>Seja qual for sua necessidade, pode contar comigo!</p>
+        <section class="conteudoSecundario">
+            <h3 class="conteudoSecundarioTitulo">Quais são suas prioridades?</h3>
+            <p class="conteudoSecundarioParagrafo">Educação para filhotes?</p>
+            <p class="conteudoSecundarioParagrafo">Puxar no passeio?</p>
+            <p class="conteudoSecundarioParagrafo">Seja qual for sua necessidade, pode contar comigo!</p>
         </section>
     </main>
-    <footer>
-        <img src="images/Design sem nome (5).png" alt="">
+    <footer class="rodape">
+        <img class="imagemRodape" src="images/Design sem nome (5).png" alt="imagemRodape">
     </footer>
     
 </body>
