--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     
     <main class="conteudo">
         <section class="conteudoPrincipal">
+            <img class="conteudoPrincipalEscritoImagem" src="images/10.png" alt="foto conteudo">
             <div class="conteudoPrincipalEscrito">
-                <h1 class="conteudoPrincipalEscritoTitulo"></h1class>>Sejam bem-vindos!!</h1>
-                <h2 class="conteudoPrincipalEscritoSubtitulo"></h2>>Que bom que chegou por aqui, isso quer dizer que está no caminho certo! Juntos iremos construir uma relação saudável e prazerosa com seus cães!</h2>
+                <h1 class="conteudoPrincipalEscritoTitulo"></h1class>Que bom que nos encontramos!!</h1>
+                <h2 class="conteudoPrincipalEscritoSubtitulo"></h2>Isso quer dizer que está no caminho certo! Juntos iremos construir uma relação saudável e prazerosa com seus cães!</h2>
                 <button class="conteudoPrincipalEscritoBotao">Confira meu Instagram</button>
             </div>
-            <img class="conteudoPrincipalEscritoImagem" src="images/Design sem nome.png" alt="foto conteudo">
+            
         </section>
         <section class="conteudoSecundario">
             <h3 class="conteudoSecundarioTitulo">Quais são suas prioridades?</h3>
