atualização CSS, alteração fotos

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="imagemCabecalho" src="images/1.png" alt="logo cabeçalho">
+        <img class="imagemCabecalho" src="images/Design sem nome (5).png" alt="logo cabeçalho">
         <nav class="menuCabecalho">
             <a class="itemMenuCabecalho">Sobre</a>
             <a class="itemMenuCabecalho">Serviços</a>
+            <a class="itemMenuCabecalho">Fotos</a>
             <a class="itemMenuCabecalho">Contato</a>
         </nav>
     </header>
@@ -20,8 +21,8 @@
         <section class="conteudoPrincipal">
             <img class="conteudoPrincipalEscritoImagem" src="images/10.png" alt="foto conteudo">
             <div class="conteudoPrincipalEscrito">
-                <h1 class="conteudoPrincipalEscritoTitulo"></h1class>Que bom que nos encontramos!!</h1>
-                <h2 class="conteudoPrincipalEscritoSubtitulo"></h2>Isso quer dizer que está no caminho certo! Juntos iremos construir uma relação saudável e prazerosa com seus cães!</h2>
+                <h1 class="conteudoPrincipalEscritoTitulo">Que bom que nos encontramos!!</h1>
+                <h2 class="conteudoPrincipalEscritoSubtitulo">Isso quer dizer que está no caminho certo! Juntos iremos construir uma relação saudável e prazerosa com seus cães!</h2>
                 <button class="conteudoPrincipalEscritoBotao">Confira meu Instagram</button>
             </div>
             
@@ -34,7 +35,7 @@
         </section>
     </main>
     <footer class="rodape">
-        <img class="imagemRodape" src="images/Design sem nome (5).png" alt="imagemRodape">
+        <img class="imagemRodape" src="images/1.png" alt="imagemRodape">
     </footer>
     
 </body>
