alteração imagens HTML e atualização CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="imagemCabecalho" src="images/Design sem nome (5).png" alt="logo cabeçalho">
+        <img class="imagemCabecalho" src="images/1.png" alt="logo cabeçalho">
         <nav class="menuCabecalho">
             <a class="itemMenuCabecalho">Sobre</a>
             <a class="itemMenuCabecalho">Serviços</a>
