Finalização página inicial com botão com link para instagram

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="conteudoPrincipalEscrito">
                 <h1 class="conteudoPrincipalEscritoTitulo">Que bom que nos encontramos!!</h1>
                 <h2 class="conteudoPrincipalEscritoSubtitulo">Isso quer dizer que está no caminho certo! Juntos iremos construir uma relação saudável e prazerosa com seus cães!</h2>
-                <button class="conteudoPrincipalEscritoBotao">Confira meu Instagram</button>
+                <a href=https://www.instagram.com/lucelia_adestradora><button class="conteudoPrincipalEscritoBotao">Confira meu Instagram</button></a>
             </div>
             
         </section>
