alteração imagens com erro de carregamento

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="imagemCabecalho" src="./images/1.png" alt="logo cabeçalho">
+        <img class="imagemCabecalho" src="./1.png" alt="logo cabeçalho">
         <nav class="menuCabecalho">
             <a class="itemMenuCabecalho">Sobre</a>
             <a class="itemMenuCabecalho">Serviços</a>
@@ -19,7 +19,7 @@
     
     <main class="conteudo">
         <section class="conteudoPrincipal">
-            <img class="conteudoPrincipalEscritoImagem" src="./images/10.png" alt="foto conteudo">
+            <img class="conteudoPrincipalEscritoImagem" src="./10.png" alt="foto conteudo">
             <div class="conteudoPrincipalEscrito">
                 <h1 class="conteudoPrincipalEscritoTitulo">Que bom que nos encontramos!!</h1>
                 <h2 class="conteudoPrincipalEscritoSubtitulo">Isso quer dizer que está no caminho certo! Juntos iremos construir uma relação saudável e prazerosa com seus cães!</h2>
@@ -35,7 +35,7 @@
         </section>
     </main>
     <footer class="rodape">
-        <img class="imagemRodape" src="./images/1.png" alt="imagemRodape">
+        <img class="imagemRodape" src="./1.png" alt="imagemRodape">
     </footer>
     
 </body>
